Add Radhika's tutorial

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 <h3>SCW2016</h3>
 <ul>
     <li>
-	Quality control and alignment | <a href="https://www.edx.org/bio/radhika-khetani">RADHIKA KHETANI</a>
+	<a href="alignment.html">Quality control and alignment</a> | <a href="https://www.edx.org/bio/radhika-khetani">RADHIKA KHETANI</a>
     </li>
     <li>
 	<a href="heterogeneity.html">Heterogeneity analysis</a> | <a href="http://jef.works">JEAN FAN</a>
