--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ title: Home
 <h3>SCW2016</h3>
 <ul>
     <li>
-	<a href="alignment.html">Quality control and alignment</a> | <a href="https://www.edx.org/bio/radhika-khetani">RADHIKA KHETANI</a>
+	<b><a href="alignment.html">Quality control and alignment</a></b> | <a href="https://www.edx.org/bio/radhika-khetani">RADHIKA KHETANI</a>
     </li>
     <li>
-	<a href="heterogeneity.html">Heterogeneity analysis</a> | <a href="http://jef.works">JEAN FAN</a>
+	<b><a href="heterogeneity.html">Heterogeneity analysis</a></b> | <a href="http://jef.works">JEAN FAN</a>
     </li>
     <li>
-	Gene correlation network analysis | <a href="http://bcb.dfci.harvard.edu/~gcyuan/people.html">ASSIEH SAADATPOUR</a> 
+	<b><a href="wgcna2.html">Gene correlation network analysis</a></b> | <a href="http://bcb.dfci.harvard.edu/~gcyuan/people.html">ASSIEH SAADATPOUR</a> 
     </li>
 </ul>
 
