--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
 	<b><a href="heterogeneity.html">Heterogeneity analysis</a></b> | <a href="http://jef.works">JEAN FAN</a>
     </li>
     <li>
-	<b><a href="wgcna2.html">Gene correlation network analysis</a></b> | <a href="http://bcb.dfci.harvard.edu/~gcyuan/people.html">ASSIEH SAADATPOUR</a> 
+	<b><a href="WGCNA2.html">Gene correlation network analysis</a></b> | <a href="http://bcb.dfci.harvard.edu/~gcyuan/people.html">ASSIEH SAADATPOUR</a> 
     </li>
 </ul>
 
