--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@ layout: default
 title: Home
 ---
 
-<h2>Harvard Single Cell Workshop</h2>
+<h2>Harvard Single Cell Workshop and Training Materials</h2>
+
+<h3>MIT2017 and Velocyto tutorials</h3>
+<ul>
+    <li>
+	<b><a href="http://pklab.med.harvard.edu/scw/mit2017/scde/chromaffin.nb.html">Heterogeneity analysis with Pagoda1</a></b> 
+    </li>
+	
+    <li>
+	<b><a href="http://pklab.med.harvard.edu/scw/mit2017/pagoda2/pbmc8k.nb.html">Heterogeneity analysis with Pagoda2</a></b> 
+    </li>
+    <li>
+	<b><a href="http://pklab.med.harvard.edu/velocyto/notebooks/R/chromaffin.nb.html">Velocyto with SMART-seq2 data</a></b> 
+    </li>
+    <li>
+	<b><a href="http://pklab.med.harvard.edu/velocyto/notebooks/R/SCG71.nb.html">Velocyto on droplet data</a></b> 
+    </li>
+    
+</ul>
+
+<hr>
 
 <h3>SCW2016</h3>
 <ul>
